--- a/css/style.css
+++ b/css/style.css
@@ -157,7 +157,7 @@ main{
 #gallery ul li img{
     width: 100%;
     height: 400px;
-    object-fit: cover;
+    object-fit: scale-down;
 }
 /* Media Screen */
 @media screen and (min-width: 900px){
