--- a/css/style.css
+++ b/css/style.css
@@ -155,9 +155,8 @@ main{
     width: 100%;
 }
 #gallery ul li img{
-    width: 100%;
-    height: 400px;
-    object-fit: scale-down;
+    height: 100%;
+    object-fit: contain;
 }
 /* Media Screen */
 @media screen and (min-width: 900px){
